# TheiaSfM

./: .clang-format  .travis.yml  CMakeLists.txt  Dockerfile  README  README.md  groups  license.txt  project.config
applications/: CMakeLists.txt  build_1dsfm_reconstruction.cc  build_1dsfm_reconstruction_flags.txt  build_reconstruction.cc  build_reconstruction_flags.txt  calibrate_camera_intrinsics.cc  calibrate_camera_intrinsics_flags.txt  colorize_reconstruction.cc  command_line_helpers.h  compare_reconstructions.cc  compute_matching_relative_pose_errors.cc  compute_reconstruction_statistics.cc  compute_two_view_geometry.cc  convert_bundle_file.cc  convert_nvm_file.cc  convert_sift_key_file.cc  convert_theia_reconstruction_to_bundler_file.cc  create_calibration_file_from_exif.cc  create_reconstruction_from_strecha_dataset.cc  evaluate_relative_translation_optimization.cc  export_1dsfm_matches.cc  export_colmap_files.cc  export_reconstruction_to_pmvs.cc  export_to_nvm_file.cc  extract_features.cc  match_descriptors.cc  match_features.cc  print_reconstruction_statistics.h  undistort_images.cc  upgrade_matches_file.cc  upgrade_reconstruction_file.cc  verify_1dsfm_input.cc  view_reconstruction.cc  write_reconstruction_ply_file.cc
data_loader/: CMakeLists.txt  README.txt
docs/source/: CMakeLists.txt  api.rst  applications.rst  bibliography.rst  building.rst  cameras.rst  commit-msg  conf.py  contributions.rst  faq.rst  features.rst  image.rst  index.rst  license.rst  math.rst  performance.rst  pose.rst  ransac.rst  releases.rst  sfm.rst
docs/source/_templates/: layout.html
libraries/: CMakeLists.txt
libraries/CppNumericalSolvers/: .travis.yml  BUILD  LICENSE  README.md  WORKSPACE  bazel.rc  eigen.BUILD  generator.bzl  lint.py
libraries/CppNumericalSolvers/matlab/: cppoptlib.cxx  example.m  local.m  make.m  rosenbrock.m  rosenbrock_grad.m  rosenbrock_hessian.m  rosenbrockstruc.m
libraries/agast/: CMakeLists.txt
libraries/agast/agast/: AstDetector.cc  AstDetector.h  LICENSE  README  agast5_8.cc  agast5_8.h  agast5_8_nms.cc  agast7_12d.cc  agast7_12d.h  agast7_12d_nms.cc  agast7_12s.cc  agast7_12s.h  agast7_12s_nms.cc  cvWrapper.h  nonMaximumSuppression.cc  oast9_16.cc  oast9_16.h  oast9_16_nms.cc
libraries/akaze/: CMakeLists.txt  LICENSE  README.md  akaze_features.cpp  akaze_match.cpp
libraries/akaze/cimg/: CImg.h  CMakeLists.txt
libraries/akaze/cmake/: CheckSSEFeatures.cmake  OptimizeCompilerFlags.cmake
libraries/akaze/src/: AKAZE.cpp  AKAZE.h  AKAZEConfig.h  convolution.cpp  convolution.h  fed.cpp  fed.h  nldiffusion_functions.cpp  nldiffusion_functions.h  utils.cpp  utils.h
libraries/akaze/timer/: CMakeLists.txt  timer.cpp  timer.hpp
libraries/cereal/: CMakeLists.txt
libraries/cimg/: CImg.h  CMakeLists.txt
libraries/cimg/cmake-modules/: FindEZMINC.cmake  FindFFMPEG.cmake  FindNetCDF.cmake  FindOpenCV.cmake  FindOpenEXR.cmake  FindTest.cmake
libraries/easyexif/: CMakeLists.txt  Makefile  README.md  demo.cpp  exif.cpp  exif.h  makefile  test.sh
libraries/easyexif/test-images/: down-mirrored.jpg.expected  evil1.jpg.expected  lens_info.jpg.expected  right.jpg.expected  short-ascii-II.jpg.expected  short-ascii-MM.jpg.expected  sony-alpha-6000.jpg.expected  test1.jpg.expected  test2.jpg.expected  test3.jpg.expected
libraries/flann/: CMakeLists.txt
libraries/gtest/gtest-build/: CMakeCache.txt  Makefile  cmake_install.cmake
libraries/optimo/: CMakeLists.txt  LICENSE  README.md
libraries/optimo/optimo/: CMakeLists.txt
libraries/spectra/: .gitignore  .travis.yml  AUTHORS  AUTHORS.md  CHANGELOG.md  README.md
libraries/spectra/benchmark/: Cpp.cpp  F77.cpp  Makefile  main.cpp
libraries/spectra/doxygen/: Doxyfile  Overview.md
libraries/spectra/include/: GenEigsSolver.h  SelectionRule.h  SymEigsSolver.h
libraries/spectra/test/: Eigen.cpp  GenEigs.cpp  GenEigsComplexShift.cpp  GenEigsRealShift.cpp  Makefile  QR.cpp  SymEigs.cpp  SymEigsShift.cpp  SymGEigsCholesky.cpp  SymGEigsRegInv.cpp
libraries/statx/: CMakeLists.txt  LICENSE  README.md
libraries/statx/statx/: CMakeLists.txt
libraries/stlplus3/: CMakeLists.txt  file_system.cpp  file_system.hpp  portability_fixes.cpp  portability_fixes.hpp  wildcard.cpp  wildcard.hpp
libraries/visual_sfm/: CMakeLists.txt  DataInterface.h  FeaturePoints.cpp  FeaturePoints.h  MatchFile.cpp  MatchFile.h  points.h  util.h
libraries/vlfeat/: CMakeLists.txt
libraries/vlfeat/vl/: host.h  mathop.c
src/theia/: CMakeLists.txt
src/theia/alignment/: alignment.h
src/theia/image/: image.cc  image.h  image_cache.cc  image_cache.h  image_canvas.cc  image_canvas.h  image_test.cc
src/theia/io/: bundler_file_reader.cc  bundler_file_reader.h  eigen_serializable.h  import_nvm_file.cc  import_nvm_file.h  populate_image_sizes.cc  populate_image_sizes.h  read_1dsfm.cc  read_1dsfm.h  read_bundler_files.cc  read_bundler_files.h  read_calibration.cc  read_calibration.h  read_calibration_test.cc  read_keypoints_and_descriptors.cc  read_keypoints_and_descriptors.h  read_matches.cc  read_matches.h  read_matches_deprecated.cc  read_matches_deprecated.h  read_strecha_dataset.cc  read_strecha_dataset.h  reconstruction_reader.cc  reconstruction_reader.h  reconstruction_reader_deprecated.cc  reconstruction_reader_deprecated.h  reconstruction_writer.cc  reconstruction_writer.h  reconstruction_writer_deprecated.cc  reconstruction_writer_deprecated.h  sift_binary_file.cc  sift_binary_file.h  sift_text_file.cc  sift_text_file.h  sift_vsfm_file.cc  sift_vsfm_file.h  write_bundler_files.cc  write_bundler_files.h  write_calibration.cc  write_calibration.h  (+13 more)
src/theia/matching/: brute_force_feature_matcher.cc  brute_force_feature_matcher.h  brute_force_feature_matcher_test.cc  cascade_hasher.cc  cascade_hasher.h  cascade_hashing_feature_matcher.cc  cascade_hashing_feature_matcher.h  cascade_hashing_feature_matcher_test.cc  create_feature_matcher.cc  create_feature_matcher.h  distance.h  distance_test.cc  feature_correspondence.h  feature_correspondence_test.cc  feature_matcher.cc  feature_matcher.h  feature_matcher_options.h  (+20 more)
(+702 files in other folders)
